Add: Class, Abstract class, Extend, Private, public, protected, static.

--- a/1/index.html
+++ b/1/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>TypeScript 1</p>
-    <script src="../dist/app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
